# rtspiral_pypulseq

./: .gitignore  CITATION.cff  README.md  Simulate2DSpiral.py  Simulate3DSpiralSequence.ipynb  config_3d.toml  config_cine.toml  example_config.toml  requirements.txt  requirements_mrzero.txt  requirements_sim.txt  setup.py  sim_rtspiral.py  vds.py  vds_test.py  write_mespiral_3d.py  write_rtspiral.py  write_rtspiral_3d.py  write_rtspiral_cine.py  write_rtspiral_multislice.py  write_rtspiral_nih.py  write_rtspiral_tagging.py  write_rtspiral_time_optimal.py
gropt/: __init__.py  gropt.c  helper_utils.py  setup.py
kernels/: kernel_crusher.py  kernel_handle_preparations.py  kernel_rf.py  kernel_tag_CSPAMM.py  kernel_tag_SPAMM.py  kernel_tag_SPAMM_REALTAG.py  kernel_tag_radial_AM.py  kernel_trigger.py
librewinder/: design_rewinder.py  rewinder_m1_nayak.py
libspiral/: setup.py
libspiralgen/: __init__.py  spiralgen.py
libvds/: __init__.py  vds.py  vds_build.py
libvds_rewind/: design_rewinder.py  design_rewinder2.py  design_rewinder_exact_time.py  design_rewinder_time_optimal.py  pts_to_waveform.py  rounding.py  trap_moments.py
modules/libspiral/: pyproject.toml  setup.py
modules/libspiral/ext/: spiralgen_jgp_12oct.c  vds.c
modules/libspiral/src/: __init__.py  libspiral.py  spiralgen_build.py
modules/libspiral/src/libspiralutils/: __init__.py  design_rewinder_exact_time.py
protocols/: cardiac_bssfp_cine_055T.toml  freemax_ga_cardiac_bssfp.toml  lung_bssfp_dynamic_055T.toml  lung_dynamic_055T.toml  lung_flash_dynamic_055T.toml  sparse_spirals.toml  (+1 more)
(+15 files in other folders)
